# m4t-s2s-video-dubber

./: .env.example  .gitignore  README.md  SPEC.md  debug_audio.py  ensamblar_video.py  extraer_audio.py  main.py  orquestar.py  probar_voces.py  pyproject.toml  requirements.txt  traducir.py  traducir0.py  traducir1.py
m4t_dubber/: __init__.py  config.py  pipeline.py
m4t_dubber/audio/: __init__.py  assembler.py  separator.py  subtitler.py  translator.py  voice_cloner.py
tools/: debug_audio.py  extraer_audio.py  probar_voces.py
